# Sigma-Rule-Tester

./: LICENSE
Sigma-Rule-Tester/: LICENSE  README.md  pyproject.toml  requirements.txt  result.json
Sigma-Rule-Tester/docs/: architecture.md
Sigma-Rule-Tester/examples/: sample.txt
Sigma-Rule-Tester/src/: __init__.py  cli.py  config.py  main.py  models.py  service.py
Sigma-Rule-Tester/tests/: test_service.py
