[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-rule-tester"
version = "1.0.0"
description = "Carga reglas Sigma, evalua logs y exporta coincidencias."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FatimaCyberLabs"}]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
sigma-test = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["src"]
